# mkdocs-easylinks-plugin

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
example/: mkdocs.yml
example/docs/: index.md
example/docs/guides/: admonitions.md  advanced.md  examples.md  exclude-directories.md  getting-started.md  ignore-files-example.md  statistics.md
example/docs/reference/: api.md  configuration.md  images-guide.md
mkdocs_easylinks/: __init__.py  plugin.py
tests/: __init__.py  test_plugin.py
